<resources>
    <string name="app_name">NavFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">fa3e844ce31744388e07fa47c7c5d8c3</string>
    <string name="prefs_file">edu.bo.navfragments.PREFERENCE_FILE_KEY</string>
    <string name="title_movie">The Amazing Spider-man 2</string>
    <string name="director">Marc Webb</string>
    <string name="all">Imagen Poster</string>
    <string name="description">Como todo joven, Peter suspira por una chica de su clase, la siempre bella Mary Jane Watson (MJ). En una excursión de un curso de ciencias a un laboratorio de investigación, Peter es mordido por una araña genéticamente alterada. En ese momento su vida cambiará para siempre.</string>
    <string name="title_activity_add">Nueva Pelicula</string>
    <string name="name_form">Titulo de la Pelicula</string>
    <string name="save">GUARDAR</string>
    <string name="director_form">Director</string>
    <string name="urlPoster_form">Url de la imagen</string>
</resources>