<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPostFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtAddPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_add"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitleMovieAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_form"
            android:textColor="@color/text_dark"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTxtTitleMovieAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleMovieAdd"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/name_form"
            android:ems="80"
            android:hint="@string/name_form"
            android:inputType="textAutoComplete"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/txtDirectorMovieAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTxtTitleMovieAdd"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/director_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTxtDirectorMovieAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDirectorMovieAdd"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:autofillHints="@string/director_form"
                android:ems="3"
                android:hint="@string/director_form"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/txtUrlPosterAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTxtDirectorMovieAdd"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/urlPoster_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTxtUrlPosterAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtUrlPosterAdd"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/urlPoster_form"
                android:hint="@string/urlPoster_form"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:inputType="textAutoComplete"
                tools:ignore="TextFields"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_below="@+id/editTxtUrlPosterAdd"
                android:background="@drawable/ic_btn"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>