<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".activities.DetailActivity">

    <ImageView
        android:id="@+id/imgViewBackgroundDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/all"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/amazing_spider_man_movie_image_andrew_garfield_2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContainerDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="32dp"
                android:text="@string/title_movie"
                android:textColor="@color/teal_700"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/txtDescriptionMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/teal_200"
                android:text="@string/description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginEnd="20dp"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewContainerDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardViewContainerDetail">

        <ImageView
            android:id="@+id/imgViewPosterDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/amazing_spider_man_movie_image_andrew_garfield_2"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>